--- a/styles.css
+++ b/styles.css
@@ -7,6 +7,12 @@ text{
 div.background{
   color: inherit;
 }
+paragraph{
+  text-align: center;
+  font style: normal;
+  font-family: sans-serif;
+  font-size: 85;
+}
 h1{
   text-align: center;
   font-style: normal;
