--- a/styles.css
+++ b/styles.css
@@ -1,37 +1,45 @@
 <html>
 <head>
 <style>
-
-paragraph{
-  text-align: center;
-  font style: normal;
-  font-family: sans-serif;
-  font-size: 65;
-  }
 h1{
-  text-align: center;
+  text-align: left;
   font-style: normal;
   font-family: sans-serif;
-  font-size: 80;
+  font-size: 30px;
 }
 h2{
   text-align: left;
   font-style: normal;
   font-family: sans-serif;
-  font-size: 70;
+  font-size: 25px;
 }
 h3{
-  text-align: center;
+  text-align: left;
   font-style: normal;
+  font-weight: bold;
   font-family: sans-serif;
-  font-size: 65;
+  font-size: 20px;
 }
-a{
+h4{
+  text-align: left;
+  font-style: normal;
+  font-weight: normal;
+  font-family: sans-serif;
+  font-size: 15px;
+}
+header{
   text-align: center;
   font-style: normal;
   font-weight: bold;
   font-family: sans-serif;
-  font-size: 70;
+  font-size: 30px;
+}
+a{
+  text-align: center;
+  font-style: normal;
+  font-weight: normal;
+  font-family: sans-serif;
+  font-size: 30px;
 }
 a:visited{
     background-color: yellow;
